--- a/package.json
+++ b/package.json
@@ -10,33 +10,36 @@
     "type": "git",
     "url": "git+https://github.com/Doanvin/test.git"
   },
-  "author": "",
+  "author": "@Doanvin",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/Doanvin/test/issues"
   },
   "homepage": "https://github.com/Doanvin/test#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.18.8",
+    "babel-cli": "6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "2.24.4",
     "del": "^2.2.2",
     "eslint": "^4.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "7.0.1",
     "gulp-cache": "^0.4.6",
     "gulp-clean-css": "^3.2.0",
     "gulp-concat": "^2.6.1",
-    "gulp-htmlmin": "^3.0.0",
+    "gulp-htmlmin": "4.0.0",
     "gulp-imagemin": "^3.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2",
+    "gulp-sass": "4.0.1",
+    "gulp-uglify": "3.0",
     "sass-lint": "^1.10.2"
   },
   "dependencies": {
-    "bulma": "0.5.3"
+    "bulma": "0.5.3",
+    "gulp-sourcemaps": "^2.6.4"
   }
 }
